--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "reflexjs": "^2.0.0-alpha.6"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^3.1.0",
     "@types/react": "^17.0.3",
     "remark-autolink-headings": "^6.0.1",
     "remark-slug": "^6.0.0",
